# antigravity-service-desk

./: .env  .gitignore  LICENSE  README.md  app.py  demo.py  pyproject.toml  requirements.txt  verify_project.py
coded_tools/: pii_scrubber.py  ticket_builder.py
config/: llm_config.hocon
mcp/: mcp_info.hocon
registries/: aaosa_basic_debug.hocon  it_service_desk.hocon  manifest.hocon
tools/: guardrails.py  pii_scrubber.py  ticket_builder.py  ticket_parser.py
